# servier-de

./: .gitignore  README.md
SQL/: 1.sql  2.sql
python-servier/: pyproject.toml
python-servier/airflow-dags/: custom_operator.py  servier_pipeline.py
python-servier/airflow-dags/script/: helper.py
python-servier/airflow-dags/tests/: test_func.py
python-servier/import/minio/airflow/: drug_graph_final.json
